--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Redeemer",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.22.1",
     "live-server": "^1.2.1",
     "node-sass": "^6.0.0"
   }
